# fdicdataPy

./: README.md  main.py  pyproject.toml  setup.py  test.py
fdicdata/: __init__.py  dataTaxonomy.py  getFailures.py  getFinancials.py  getHistory.py  getInstitution.py  getSummary.py  getTaxonomy.py
fdicdata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: getFailures.py  getFinancials.py  getHistory.py  getInstitution.py  getLocation.py  getSummary.py  get_institutions_all.py
src/fdicdataPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.failures.py  test.financials.py  test.history.py  test.institution.py  test.location.py  test.summary.py  test.taxonomy.py
